<resources>
    <string name="app_name">SlideCalendar</string>

    <string name="navigation_tab_homepage">首页</string>
    <string name="navigation_tab_schedule">日程</string>
    <string name="navigation_tab_message">消息</string>
    <string name="navigation_tab_profile">我的</string>

    <string name="calendar_title">日程安排</string>
    <string name="calendar_monday">周一</string>
    <string name="calendar_tuesday">周二</string>
    <string name="calendar_wednesday">周三</string>
    <string name="calendar_thursday">周四</string>
    <string name="calendar_friday">周五</string>
    <string name="calendar_saturday">周六</string>
    <string name="calendar_sunday">周日</string>
    <string name="calendar_year">%1$d年</string>
    <string name="calendar_month">%1$d月</string>
</resources>
